--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.5",
     "excel": "^1.0.1",
     "exceljs": "^4.4.0",
     "express": "^4.21.0",
