--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = "postgres://default:OCZlqTwuc8S3@ep-curly-bush-a16uqp5a.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+DATABASE_URL = "postgres://default:JjMY5mUkIz4S@ep-curly-bush-a16uqp5a.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
