--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "pdfkit": "^0.15.0",
